k8s/main/frontend/frontend_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingressroute
  namespace: main
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`steponedockerregistry.co.in`)
      services:
        - name: frontend
          port: 80
  tls:
    - secretName: wildcard-ssl-secret
